use pdflib for pdfs;scroll back to prev Y position when done generating pdf or editing;hide preview when generating pdfs on mobile

--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "@mui/styles": "^6.1.6",
+    "@pdf-lib/fontkit": "^1.1.1",
     "axios": "^1.7.7",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.2",
+    "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.4",
